// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Properly computes diffs # 1`] = `
Object {
  "id": "1glasses",
  "parentId": "0jewelry",
  "position": 0,
  "sortOrder": 0,
  "type": "move",
}
`;

exports[`Properly computes diffs # 2`] = `
Object {
  "id": "1glasses",
  "parentId": "2accessories",
  "position": 0,
  "sortOrder": -1,
  "type": "move",
}
`;

exports[`Properly computes diffs # 3`] = `
Object {
  "id": "2accessories",
  "parentId": "4apparel",
  "position": 0,
  "sortOrder": 0,
  "type": "move",
}
`;
